--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 					<section class="intro">
 						<header>
 							<h1>Welcome to Sword Home</h1>
-							<!-- <p>A free responsive site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
+							<p>Put daily study experience  <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
-							</ul> -->
+							</ul>
 						</header>
 						<div class="content">
 							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
