--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>Dafny Case Study</h2>
+							<h2>Encoding Proof dependency in Dafny</h2>
 						</header>
 						<div class="content">
 							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
@@ -46,7 +46,7 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Compile Safety protocol to Murphi </h2>
+							<h2>AnB Specification to Murphi </h2>
 						</header>
 						<div class="content">
 							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
