--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="intro">
 						<header>
 							<h1>Welcome to Sword Home</h1>
-							<p>Put daily study experience  <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
+							<p>Put daily study experience  <a href="https://twitter.com/ajlkn">@sword</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
