--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
 						</header>
 						<div class="content">
 							<p><strong>Dafny</strong> Dafny is a language that is designed to make it easy to write correct code. This means correct in the sense of not having any runtime errors, but also correct in actually doing what the programmer intended it to do. To accomplish this, Dafny relies on high-level annotations to reason about and prove correctness of code. The effect of a piece of code can be given abstractly, using a natural, high-level expression of the desired behavior, which is easier and less error prone to write. Dafny then generates a proof that the code matches the annotations (assuming they are correct, of course!). Dafny lifts the burden of writing bug-free code into that of writing bug-free annotations. This is often easier than writing the code, because annotations are shorter and more direct.</p>
-							<span class="image main"><img src="images/dafny.jpg" alt="" /></span>
 							<ul class="actions">
-								<li><a href="/pages/dafny.html" class="arrow scrolly"><span class="label">Next</span></a></li>
+								<li><a href="/pages/dafny.html" class="arrow scrolly"><span class="image main"><img src="images/dafny.jpg" alt="" /></span></a></li>
 							</ul>
 						</div>
 					</section>
