--- a/generic.html
+++ b/generic.html
@@ -25,7 +25,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">This is Massively</a></li>
+							<li><a href="index.html">Dafny</a></li>
 							<li class="active"><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
@@ -45,7 +45,7 @@
 								<header class="major">
 									<span class="date">April 25, 2017</span>
 									<h1>This is a<br />
-									Generic Page</h1>
+									Murphi</h1>
 									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
 									amet nullam sed etiam veroeros.</p>
