--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
+							<li class="active"><a href="index.html">Main page</a></li>
 							<li><a href="dafny.html">Dafny</a></li>
 							<li><a href="murphi.html">Murphi</a></li>
 						</ul>
