--- a/dafny.html
+++ b/dafny.html
@@ -25,7 +25,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">Dafny</a></li>
+							<li><a href="index.html">Main</a></li>
 							<li class="active"><a href="dafny.html">Dafny</a></li>
 							<li><a href="murphi.html">Murphi</a></li>
 						</ul>
