--- a/dafny.html
+++ b/dafny.html
@@ -52,11 +52,11 @@
 								<div class="image fit"><img src="images/dafny.jpg" alt="" /></div>
 								<h3>Method规约</h3>
 								<p>method是强制执行的代码，在其他语言里左脚procedures或者function，在Dafny，function保留为另一个不同的概念。</p>
-								<p>一个method段为：
-									method Abs(x:int) returns (y:int)
-									{
-										...
-									}
+								<p>一个method段为：<br>
+									method Abs(x:int) returns (y:int)<br>
+									{<br>
+										...<br>
+									}<br>
 								</p>
 							</section>
 
