--- a/dafny.html
+++ b/dafny.html
@@ -58,6 +58,7 @@
 										...<br>
 									}<br>
 								</p>
+								<p>方法名为Abs，带有一个整型的参数x,返回一个整型y。参数后须跟:和类型。同时可以声明多个参数和多个返回类型。</p>
 							</section>
 
 					</div>
