--- a/dafny.html
+++ b/dafny.html
@@ -51,14 +51,15 @@
 								</header>
 								<div class="image fit"><img src="images/dafny.jpg" alt="" /></div>
 								<h3>Method规约</h3>
-								<p>method是强制执行的代码，在其他语言里左脚procedures或者function，在Dafny，function保留为另一个不同的概念。</p>
-								<p>一个method段为：<br>
+								<p>method是强制执行的代码，在其他语言里左脚procedures或者function，在Dafny，function保留为另一个不同的概念。<br>
+								一个method段为：<br>
 									method Abs(x:int) returns (y:int)<br>
 									{<br>
 										...<br>
 									}<br>
-								</p>
-								<p>方法名为Abs，带有一个整型的参数x,返回一个整型y。参数后须跟:和类型。同时可以声明多个参数和多个返回类型。</p>
+								方法名为Abs，带有一个整型的参数x,返回一个整型y。参数后须跟:和类型。同时可以声明多个参数和多个返回类型。<br>
+								method的主体是由花括号围起来的代码段。主体包括一系列的陈述句，如强制赋值，if语句，循环和其他method的调用，返回语句等。<br>
+							</p>
 							</section>
 
 					</div>
