--- a/dafny.html
+++ b/dafny.html
@@ -59,7 +59,10 @@
 									}<br>
 								方法名为Abs，带有一个整型的参数x,返回一个整型y。参数后须跟:和类型。同时可以声明多个参数和多个返回类型。<br>
 								method的主体是由花括号围起来的代码段。主体包括一系列的陈述句，如强制赋值，if语句，循环和其他method的调用，返回语句等。<br>
-							</p>
+								<br>通过:=进行赋值，Dafny使用==进行相等，dafny没有一个等号的表达式。语句后面跟一个分号，空格和//或者/**/注释会被忽略。
+								</p>
+								<h3>Pre-和Postcondition规约</h3>
+								
 							</section>
 
 					</div>
