--- a/dafny.html
+++ b/dafny.html
@@ -62,7 +62,15 @@
 								<br>通过:=进行赋值，Dafny使用==进行相等，dafny没有一个等号的表达式。语句后面跟一个分号，空格和//或者/**/注释会被忽略。
 								</p>
 								<h3>Pre-和Postcondition规约</h3>
-								
+								<h3>Assertions</h3>
+								<h3>Functions</h3>
+								<h3>Loop invriants</h3>
+								<h3>Termination</h3>
+								<h3>Arrays</h3>
+								<h3>Quantifiers</h3>
+								<h3>Predicates</h3>
+								<h3>Framing</h3>
+								<p></p>
 							</section>
 
 					</div>
