--- a/dafny.html
+++ b/dafny.html
@@ -62,6 +62,7 @@
 								<br>通过:=进行赋值，Dafny使用==进行相等，dafny没有一个等号的表达式。语句后面跟一个分号，空格和//或者/**/注释会被忽略。
 								</p>
 								<h3>Pre-和Postcondition规约</h3>
+								<p>Dafny的强大之处是能够通过注解方法指定行为。如Abs方法的不论什么输入，其结果总是大于等于0。有了这个注解，Dafny可以证明我们声称方法的属性为真</p>
 								<h3>Assertions</h3>
 								<h3>Functions</h3>
 								<h3>Loop invriants</h3>
