--- a/dafny.html
+++ b/dafny.html
@@ -71,7 +71,14 @@
 										}<br>
 									通常来说，Dafny验证错误有两大原因，规约与代码不一致或者不够clever来证明所需属性成立。
 									Preconditions与postcondition类似，在方法调用前必须为真。当编写方法的时候，你假设了前置条件，就必须设置后置条件。方法的调用就会假设当方法返回时，后置条件成立。<br>
-									requires是precondtion的关键字。
+									requires是precondtion的关键字。<br>
+									method MultipleReturns(x:int,y:int) returns (more:int,less:int)<br>
+									&#9;requires 0 < y<br>
+									&#9;ensures less < x < more<br>
+									{<br>
+										&#9;more := x + y ;<br>
+										&#9;less := x - y ;<br>
+									}<br>
 								</p>
 								<h3>Assertions</h3>
 								<h3>Functions</h3>
