--- a/dafny.html
+++ b/dafny.html
@@ -82,6 +82,7 @@
 									}<br>
 								</p>
 								<h3>Assertions</h3>
+								<p>assert可以放在method的任意的中部，</p>
 								<h3>Functions</h3>
 								<h3>Loop invriants</h3>
 								<h3>Termination</h3>
