--- a/dafny.html
+++ b/dafny.html
@@ -201,7 +201,7 @@
 									<h1>Dafny 学习编码记录3</h1>
 								</header>
 								<h3>Sets</h3>
-								不同类型的Set是Dafny验证的核心工具之一。Sets表示没有重复的无序元素集合。和Sequence类似，set是不可变的值类型。Set一旦创建，不能再被修改。Set对整数有以下类型:set<int>。总的来说，sets可以是任何类型，包括对象。具体的Set可以显示的表示：
+								不同类型的Set是Dafny验证的核心工具之一。Sets表示没有重复的无序元素集合。和Sequence类似，set是不可变的值类型。Set一旦创建，不能再被修改。Set对整数有以下类型:set<int>。总的来说，sets可以是任何类型，包括对象。具体的Set可以显示的表示：<br>
 									var s1 := {}; // the empty set <br>
 									var s2 := {1, 2, 3}; // set contains exactly 1, 2, and 3 <br> 
 									assert s2 == {1,1,2,3,3,3,3}; // same as before <br> 
