--- a/dafny.html
+++ b/dafny.html
@@ -221,7 +221,11 @@
 								assert 2 !in {1,3,4,5};<br> 
 								assert forall x :: x !in {};<br> 
 								集合可以使用reads和modifies条例。当使用decreases子句是，集合由子集有序表示。借助集合的理解来创建集合。通过包含f(x)来为所有类型为T的x满足p(x)：
-								<br>   set x: T | p(x) :: f(x)
+								<br>   set x: T | p(x) :: f(x)<br>
+								｜是用来分离谓词p和有界变量x。结果集的元素类型就是f(x)的返回值类型。如下:<br>
+								assert (set x | x in {0,1,2} :: x * 1) == {0,1,2}; <br>
+								assert (set x | x in {0,1,2,3,4,5} && x < 3) == {0,1,2};<br>
+								assert (set x | x in {0,1,2} :: x + 1) == {1,2,3};<br>
 
 					</div>
 			</div>
