--- a/dafny.html
+++ b/dafny.html
@@ -268,8 +268,15 @@
 									<span class="date">Decemeber 11, 2020</span>
 									<h1>Dafny 学习编码记录5</h1>
 								</header>
-								<h3>Collection Types</h3>
-								 
+								<div class="col-6 col-12-small">
+									<h3>Collection Types</h3>
+									<ol>
+										<li>Sets</li>
+										<li>Sequences</li>
+										<li>Multisets</li>
+										<li>Maps</li>
+									</ol>
+								</div>
 							</secition>
 					</div>
 			</div>
