--- a/dafny.html
+++ b/dafny.html
@@ -304,7 +304,20 @@
 									<span class="date">Decemeber 11, 2020</span>
 									<h1>Dafny 学习编码记录5</h1>
 								</header>
-								<h3>Lemmas and Induction</h3>
+								<div class="col-6 col-12-small">
+									<h3>Lemmas and Induction</h3>
+									<ol>
+										<li>Introduction</li>
+										<li>Searching for Zero</li>
+										<li>Lemmas</li>
+										<li>Counting</li>
+										<li>Proving the Distributive Property</li>
+										<li>Induction</li>
+										<li>Paths In a Directed Graph</li>
+									</ol>
+								</div>					
+								<h3>Introduction</h3>
+								
 							</secition>
 					</div>
 			</div>
