--- a/dafny.html
+++ b/dafny.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">DAFNY</a>
 					</header>
 
 				<!-- Nav -->
@@ -324,7 +324,7 @@
 									</ol>
 								</div>					
 								<h3>Introduction</h3>
-
+								证明程序正确有时需要逻辑步骤，但是对于Dafny来说发现这些逻辑过于复杂。这种情况，我们通常提供lemma来给Dafny援助。<br>
 							</secition>
 					</div>
 			</div>
