--- a/dafny.html
+++ b/dafny.html
@@ -325,6 +325,8 @@
 								</div>					
 								<h3>Introduction</h3>
 								证明程序正确有时需要逻辑步骤，但是对于Dafny来说发现这些逻辑过于复杂。这种情况，我们通常提供lemma来给Dafny援助。<br>
+								Lemmas是用来证明其他结果的定理，而不是成为一个目标。他们允许Dafny将证明分成：证明lemma，然后用来证明最后的结果；最后的结果成为程序的正确性。Dafny和计算机擅长处理特定的细节和覆盖所有的案例，但是看不到中间过程来是证明过程变得简单。
+								
 							</secition>
 					</div>
 			</div>
