--- a/dafny.html
+++ b/dafny.html
@@ -342,6 +342,8 @@
 								   index := index + a[index];<br>
 								}<br>
 								index := -1;<br>
+								这段代码计算出正确的结果，但是Dafny抱怨第二个循环不变式不成立，Dafny不信任所有哪些跳过的元素是合理的。理由是前置条件说每个连续的元素最多减少一，但是并没有说更远的元素是如何关联的。为了说服这个fact，我们需要使用一个引理。<br>
+								<h3>Lemmas</h3>
 							</secition><br>
 					</div>
 			</div>
