--- a/dafny.html
+++ b/dafny.html
@@ -379,6 +379,7 @@
 								 {<br>
 									&nbsp&nbsp&nbsp&nbsp i := i + 1;<br>
 								 }<br>
+								 其中第一个不变式是如果没有运行到数组的最后，对当前元素做了约束。对于超过j的索引，数组只能小一位，所以这个值从a[j]中提取。
 							</secition>
 					</div>
 			</div>
