--- a/dafny.html
+++ b/dafny.html
@@ -396,6 +396,7 @@
 									}<br>
 								上述代码直截了当，但是函数的定义是递归的。递归函数倾向于需要lemmas。我们想要证明：forall a,b :: count(a+b) == count(a) + count(b)<br>
 								其中第一个+是序列的连结，第二个+是整数的加法。<br>
+								在我们的例子中,我们有两个选择引理:我们也可以写全称量词,或者我们可以使引理特定序列a和b。事实证明,当我们想要分配律,我们不需要完整的通用属性。我们感兴趣的是，对于程序中已知的两个特定的a和b, count(a + b) == count(a) + count(b)。因此，当我们调用引理来获得属性时，我们可以告诉它我们对哪两个序列感兴趣。如果我们在其他地方有不同的序列，我们可以用不同的参数调用该方法，就像常规方法一样。证明完整的普遍性质，虽然是可能的，但要比证明具体的，具体的情况做得更多，所以我们将首先处理这个情况。<br>
 								lemma DistributiveLemma(a: seq<bool>, b: seq<bool>)<br>
 									ensures count(a + b) == count(a) + count(b)<br>
 								 {<br>
