--- a/dafny.html
+++ b/dafny.html
@@ -406,7 +406,27 @@
 									if |a| == 0 then 0 else<br>
 									(if a[0] then 1 else 0) + count(a[1..])<br>
 								 }<br>
-								 
+								 <h3>Proving the Distributive Property</h3>
+								 在写lemma之前，我们先搞清楚证明它的策略。发现Dafny不能证明的原因是count函数是从序列的首部开始定义的，而分布式属性在序列的中部进行操作。如果我们找到从序列头开始工作，那么Dafny可以直接使用这个函数。如果a==[]，那么不管b是什么，a+b==b。Lemma通过isf statements来解决案例。<br>
+								 if a == []<br>
+								{<br>
+								assert a + b == b;<br>
+								assert count(a) == 0;<br>
+								assert count(a + b) == count(b);<br>
+								assert count(a + b) == count(a) + count(b);<br>
+								}<br>
+								else<br>
+								{<br>
+								...<br>
+								}<br>
+								即如果a==[]，那么lemma直接证明了后置条件。当0<|a|时，如何将count(a+b) 与count(a) 和count(b)相连。我们通过下面的小技巧来扩展count（a+b）:<br>
+								assert a + b == [a[0]] + (a[1..] + b);<br>
+								assert count(a + b) == count([a[0]]) + count(a[1..] + b);<br>
+								最后，我们替换count（a）到后置条件得到：<br>
+								assert count(a + b) == count(a) + count(b); // postcondition<br>
+								assert count(a + b) == count([a[0]]) + count(a[1..]) + count(b);<br>
+								<h3>Induction</h3>
+							 
 							</secition>
 					</div>
 			</div>
