--- a/dafny.html
+++ b/dafny.html
@@ -426,6 +426,10 @@
 								assert count(a + b) == count(a) + count(b); // postcondition<br>
 								assert count(a + b) == count([a[0]]) + count(a[1..]) + count(b);<br>
 								<h3>Induction</h3>
+								我们尝试的参数是归纳的。我们通过证明小版本的问题是真的。这就是归纳的精确定义，通过一个更小的问题来证明大的问题。我们通过调用递归属性。<br>
+								Dafny会假设递归调用满足规约。这是归纳假设，所有lemma的递归调用是合理的。这依赖于Dafny如何证明终止。在这个实例中，是if语句的第一个分支。如果没有递归调用，lemma必须直接证明。如果Dafny不能证明这个链终止，那么这个链将永远执行，每次调用的假设不会被证实。
+							<br>归纳法一般来说是找到一种方法来逐步建立你的目标。观察其他方法，通过小问题来证明目标。分布式lemma通过结构连续的序列知道第一个序列变成空。<br>
+							实现这个工作的关键是Dafny永远不必考虑整个调用链。通过检查终止，可以得到链是有限的。然后它所要做的就是检查一个步骤。如果任意一个步骤是有效的，那么整个链肯定也是有效的。这和Dafny在循环中使用的逻辑是一样的:一开始检查不变量是否保持不变，然后任意的一步保持不变，这样你就检查了整个循环，不管循环运行了多少次。相似之处不仅仅是表面上的。这两种引理(以及Dafny对你的程序所做的两种推理)都是归纳的。考虑到迭代和递归作为获得同一事物的两种方法之间的关系，这也不足为奇。<br>
 								lemma DistributiveLemma(a: seq<bool>, b: seq<bool>)<br>
 									ensures count(a + b) == count(a) + count(b)<br>
 								 {<br>
