--- a/dafny.html
+++ b/dafny.html
@@ -28,7 +28,7 @@
 							<li><a href="index.html">Main</a></li>
 							<li class="active"><a href="dafny.html">Dafny</a></li>
 							<li><a href="murphi.html">Murphi</a></li>
-							<li><a href="spin.html">Spin</a></li>
+							<li><a href="spin.html">Paper</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
