--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<li class="active"><a href="index.html">Main page</a></li>
 							<li><a href="dafny.html">Dafny</a></li>
 							<li><a href="murphi.html">Murphi</a></li>
-							<li><a href="spin.html">Spin</a></li>
+							<li><a href="spin.html">Paper</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
