--- a/spin.html
+++ b/spin.html
@@ -50,10 +50,10 @@
 
 								<!-- Text stuff -->
 									<h2>Formal modeling of cryptographic protocols:Dolev-Yao model</h2>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>.
-									Finally, this is a <a href="#">link</a>.</p>
+									Formal verification of cryptographic protocols requires an abstract model of agents’ capabilities and communications, and the Dolev-Yao model has been the bulwark of such modelling.
+									This model and its various extensions have been the object of study for the last 30 years.
+									This model views the message space as a term algebra. Term derivation rules specify how
+									agents can obtain new terms from old ones
 									<hr />
 							</section>
 					</div>
